selfhost/test/typechecker/if/error_mismatch_bindingdecl.3.abra
val a: Int = if true 1 else None